--- a/backend/apps/warehouse/templates/cheque/cheque_list.html
+++ b/backend/apps/warehouse/templates/cheque/cheque_list.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %}
 {% block content %}
     <!DOCTYPE html>
     <!--
@@ -86,16 +87,23 @@
                                                     <a href="{% url 'warehouse_v2:cheque-detailed' i.pk %}">{{ i.cheque_number }}</a>
                                                 </td>
                                                 <td>{{ i.patient.full_name }}</td>
-                                                <td>{{ i.total_price }}</td>
+                                                <td>{{ i.total_price|intcomma }}</td>
                                                 <td>{{ i.created_by.full_name }}</td>
                                                 <td>{{ i.created_at }}</td>
                                                 {% if i.state == 'не оплачено' %}
                                                     <td><span class="badge bg-warning">{{ i.state }}</span></td>
+                                                    <td>
+                                                    <a class="badge-pill"
+                                                       href="{% url 'warehouse_v2:cheque-update' i.pk %}">
+                                                        <i class="fas fa-edit"></i>
+                                                    </a>
+                                                </td>
                                                 {% elif i.state == 'оплачено' %}
                                                     <td><span class="badge bg-success">{{ i.state }}</span></td>
                                                 {% elif i.state == 'отказоно' %}
                                                     <td><span class="badge bg-black">{{ i.state }}</span></td>
                                                 {% endif %}
+
                                             </tr>
                                         {% endfor %}
 
