--- a/backend/apps/warehouse/templates/income/income_details.html
+++ b/backend/apps/warehouse/templates/income/income_details.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %}
 {% block content %}
     <!DOCTYPE html>
     <!--
@@ -59,36 +60,29 @@
                                     <table class="table table-bordered">
                                         <thead>
                                         <tr>
-                                            <th style="width: 10px">#</th>
                                             <th>Полное наименование</th>
                                             <th>Срок год.</th>
                                             <th>Количество</th>
-                                            <th>Количество единиц</th>
+                                            <th>Кол. единиц</th>
                                             <th>Базовая цена</th>
                                             <th>Цена за единицу</th>
                                             <th>Сумма</th>
-                                            <th style="width: 40px">Label</th>
+                                            <th>НДС</th>
                                         </tr>
                                         </thead>
                                         <tbody>
 
                                         {% for i in details %}
                                             <tr>
-                                                <td></td>
                                                 <td>{{ i.item.name }}</td>
-                                                <td>{{ i.item }}</td>
+                                                <td>{{ i.expire_date }}</td>
                                                 <td>{{ i.quantity }}</td>
                                                 <td>{{ i.unit_quantity }}</td>
-                                                <td>{{ i.price }}</td>
-                                                <td>{{ i.unit_price }}</td>
-                                                <td>{{ i.overall_price }}</td>
+                                                <td>{{ i.price|intcomma }}</td>
+                                                <td>{{ i.unit_price|intcomma }}</td>
+                                                <td>{{ i.overall_price|intcomma }}</td>
                                                 <td>
-                                                    <div class="progress progress-xs">
-                                                        <div class="progress-bar progress-bar-danger"
-                                                             style="width: 55%"></div>
-                                                    </div>
-                                                </td>
-                                                <td><span class="badge bg-danger">55%</span></td>
+                                                    {{ i.nds }} %
                                             </tr>
                                         {% endfor %}
 
