--- a/backend/apps/warehouse/templates/expanses/expanse_create.html
+++ b/backend/apps/warehouse/templates/expanses/expanse_create.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load crispy_forms_tags %}
+{% load humanize %}
 
 <!DOCTYPE html>
 <!--
@@ -100,7 +101,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
                                 <thead class="text-secondary">
                                 <th>Лекарства <span style="color: red;" class="required">*</span></th>
                                 <th>Количество <span style="color: red;" class="required">*</span></th>
-                                <th>Годен до <span style="color: red;" class="required">*</span></th>
                                 <th>Удалить(Не добавить) ?</th>
                                 <th>Удалить</th>
                                 </thead>
