🔼Updated: cheque patient info

--- a/backend/apps/warehouse/templates/cheque/cheque_details.html
+++ b/backend/apps/warehouse/templates/cheque/cheque_details.html
@@ -41,6 +41,10 @@
                                     <br>
                                     <h2 class="card-title"><b>Пациент:</b> {{ cheque.patient.full_name }}</h2>
                                     <br>
+                                    <h2 class="card-title"><b>Дата пождения пациента:</b> {{ cheque.patient.date_of_birth }}</h2>
+                                    <br>
+                                    <h2 class="card-title"><b>Контакт пациента:</b> {{ cheque.patient.mobile_phone_number }}</h2>
+                                    <br>
                                     <h2 class="card-title"><b>Дата:</b> {{ cheque.created_at }}</h2>
                                     <br>
                                     <h2 class="card-title">
