🔼Updated: invoice gen

--- a/backend/apps/logus/templates/logus/create_booking.html
+++ b/backend/apps/logus/templates/logus/create_booking.html
@@ -193,6 +193,10 @@
                                 <label for="example_phone_nm">Телефон</label>
                                 <input name="mobile_phone_number" type="text" class="form-control" id="example_phone_nm" placeholder="+998901002030">
                               </div>
+                              <div class="form-group">
+                                <label for="example_phone_nm">Адрес</label>
+                                <input name="address" type="text" class="form-control " id="example_address" placeholder="Ташкентская область, Кибрайский район, городской посёлок Салар, улица Гулимамур, 5/1">
+                              </div>
 
 
                                 <div class="col-sm-6">
