--- a/backend/apps/sanatorium/templates/sanatorium/doctors/snippets/navbar-dropdown.html
+++ b/backend/apps/sanatorium/templates/sanatorium/doctors/snippets/navbar-dropdown.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
     <div class="container">
-        <a href="{% url "warehouse_v2:main_screen" %}" class="navbar-brand">
+        <a href="{% url "sanatorium_doctors:main_screen" %}" class="navbar-brand">
             <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="AdminLTE Logo"
                  class="brand-image img" style="opacity: .8">
             <span class="brand-text font-weight-light"></span>
@@ -13,27 +13,32 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse order-3" id="navbarCollapse">
+        <div class="collapse navbar-collapse order-4" id="navbarCollapse">
             <!-- Left navbar links -->
             <ul class="navbar-nav">
 
-
-                <li class="nav-item">
-                    <a href="{% url 'warehouse_branch:income-list' %}" class="nav-link">Реестр прихода</a>
+                <li class="nav-item bg">
+                    <a href="{% url 'sanatorium_doctors:main_screen' %}" class="nav-link">Пациенты</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Реестр расхода</a>
+                    <a href="#" class="nav-link">События</a>
                 </li>
                 <li class="nav-item">
-                    <a href="{% url 'warehouse_branch:transfers-list' %}" class="nav-link">Реестр перемещений</a>
+                    <a href="#" class="nav-link">Диспетчеризация</a>
                 </li>
-                <li class="nav-item">
-                    <a href="{% url 'warehouse_branch:items-list' %}" class="nav-link">Реестр лекарств</a>
+                <li class="nav-item dropdown">
+                    <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                       class="nav-link dropdown-toggle">Начало приёма</a>
+                    <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow">
+                        <li><a href="#" class="dropdown-item">Заключительный прием лечащего врача </a></li>
+                        <li><a href="#" class="dropdown-item">Консультация кардиолога первичная</a></li>
+                        <li><a href="#" class="dropdown-item">Консультация невролога первичная</a></li>
+                        <li><a href="#" class="dropdown-item">Осмотр дежурного врача при поступлении</a></li>
+                        <li><a href="#" class="dropdown-item">Повторный приём лечащего врача</a></li>
+                        <li><a href="#" class="dropdown-item">Прием дежурного врача</a></li>
+                        <li><a href="#" class="dropdown-item">ЭКГ (Электрокардиограмма)</a></li>
+                    </ul>
                 </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Чеки</a>
-                </li>
-
             </ul>
 
             <!-- SEARCH FORM -->
@@ -65,7 +70,7 @@
                     </a>
                     <div class="dropdown-divider"></div>
                 {% endfor %}
-                {% if user.unread_notifications %}
+                {% if unread_notifications %}
                     <a href="#" class="dropdown-item dropdown-footer">Просмотреть все сообщении</a>
                 {% else %}
                     <a href="#" class="dropdown-item dropdown-footer">Нет сообщений</a>
@@ -87,7 +92,10 @@
                          class="img-circle elevation-2" alt="User Image">
 
                     <p>
-                        Alexander Pierce - Web Developer
+                        {{ user.full_name}}
+                    </p>
+                    <p>
+                        {{ user.email}}
                     </p>
                 </li>
                 <!-- Menu Body -->
