--- a/backend/apps/warehouse/templates/cheque/cheque_details.html
+++ b/backend/apps/warehouse/templates/cheque/cheque_details.html
@@ -64,13 +64,12 @@
                                     <br>
                                     <div class="row no-print">
                                         <div class="col-12">
-                                            <button type="button" class="btn btn-primary float-right"
-                                                    style="margin-right: 5px;">
+                                            <a href="{% url 'warehouse_v2:invoice-gen' cheque.pk %}" class="btn btn-primary float-right" style="margin-right: 5px;">
                                                 <i class="fas fa-download"></i> Скачать PDF
-                                            </button>
-                                            <button type="button" class="btn btn-default float-right"><i
-                                                    class="fas fa-print"></i> Распечатать
-                                            </button>
+                                            </a>
+{#                                            <button type="button" class="btn btn-default float-right" onclick="window.print();">#}
+{#                                                <i class="fas fa-print"></i> Распечатать#}
+{#                                            </button>#}
                                         </div>
                                     </div>
                                 </div>
