--- a/backend/apps/warehouse/templates/snippets/navbar.html
+++ b/backend/apps/warehouse/templates/snippets/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
     <div class="container">
-        <a href="{% url "warehouse_v2:mainscreen" %}" class="navbar-brand">
+        <a href="{% url "warehouse_v2:main_screen" %}" class="navbar-brand">
             <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="AdminLTE Logo"
                  class="brand-image img" style="opacity: .8">
             <span class="brand-text font-weight-light"></span>
